@@ -92,7 +92,7 @@ public class AnnotationsComponent extends DefaultComponent {
 
     protected <T> T newInstance(Class<T> klass) {
         try {
-            return klass.newInstance();
+            return klass.getDeclaredConstructor().newInstance();
         } catch (ReflectiveOperationException e) {
             throw new RuntimeException(e);
         }
